--- a/index.html
+++ b/index.html
@@ -42,8 +42,6 @@
             border-radius: 10px;
             padding: 10px;
     }
-
-
      </style>
    </head>
    <body>
@@ -55,16 +53,20 @@
        then press "Add new task"</span
      ><br /><br />
 
-      <input type="text" id="newTask" />
-     <input type="button" value="Add new Task" onclick="addNewTask()" />
+        <input type="text" id="newTask" />
+        <input type="button" value="Add new Task" onclick="addNewTask()" />
 
       <!-- EXERCISE 3
          Create a button "Remove Last Task" to trigger the method "removeLast"
          -->
 
+         <input type="button" value="Remove Last Task" onclick="removeLast()"/>
+
       <!-- EXERCISE 4
          Create a button "Remove First Task" to trigger the method "removeFirst"
          -->
+
+         <input type="button" value="Remove First Task" onclick="removeFirst()"/>
 
       <ul id="myTaskList"></ul>
 
@@ -89,6 +91,16 @@
                  - Use the document.createElement to create the new List Item
                  - Append the child to the UL
              */
+
+        const addNewTask = function () {
+            let inputValue = document.getElementById("newTask");
+            let ulElement = document.getElementById("myTaskList");
+    
+        let newItem = document.createElement("li");
+            newItem.innerText = inputValue.value;
+            ulElement.appendChild(newItem);
+            inputValue.value= "";
+}
 
         /* EXERCISE 6: 
                  Create a method "removeLast" which removes the last item from the task list
