--- a/index.html
+++ b/index.html
@@ -105,10 +105,20 @@
         /* EXERCISE 6: 
                  Create a method "removeLast" which removes the last item from the task list
              */
+        const removeLast = function () {
+            let tasks = document.querySelectorAll("li");
+            tasks[tasks.length-1].remove();     
+    }
 
         /* EXERCISE 7: 
                  Create a method "removeFirst" which removes the first item from the task list
              */
+        const removeFirst = function () {
+            let tasks = document.querySelectorAll("li");
+            tasks[0].remove();
+        }
+
+
 
         /* EXERCISE 8: 
                 Create a method "getTasksAsArray" which returns (and print to the console) an array containing the tasks as string
