--- a/index.html
+++ b/index.html
@@ -29,14 +29,15 @@
         Style every button of the page to be bigger
      */
     body {
-    background-image: radial-gradient(circle 300px at center, lightblue 50%, #ccdef0 100%);
-     }
+        background-image: radial-gradient(circle 1000px, white, lightblue);
+    }
      
      h1 {
         border: 1px solid black;
-        font-size:xx-large; 
+        font-size: 50px;
         font-weight: bold;
     }
+
     input[type="button"]
         {		      
             border-radius: 10px;
@@ -124,10 +125,23 @@
                 Create a method "getTasksAsArray" which returns (and print to the console) an array containing the tasks as string
              */
 
+
         /* EXERCISE 9:
                 Create a method "changeTaskBackgroundColor" which takes the color from the color picker with an 
                 onchange event listener ad applies it as background to every list item
              */
+      // const changeTaskBackgroundColor = function () {
+     //   document.getElementById("colorPicker").style.backgroundColor = colorPicker.value
+
+
+     const changeTaskBackgroundColor= function () {
+            let colorPicker = document.getElementById("colorPicker");
+            let tasks= document.querySelectorAll('li');
+            for (let i=0; i<tasks.length; i++){
+                tasks[i].style.backgroundColor= colorPicker.value;
+            }
+        }  
+
 
         /* EXTRA */
 
